<resources>
    <string name="app_name" translatable="false">MMSDemo</string>
    <string name="title_activity_test_navigataion" translatable="false">Test Navigataion</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_option_menu" translatable="false">Option</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_registration" translatable="false">Registration</string>
    <string name="title_add_member" translatable="false">Add Member</string>
    <string name="title_members" translatable="false">Members</string>
    <string name="title_login" translatable="false">Login</string>
    <string name="title_logout" translatable="false">Logout</string>
    <string name="title_signin" translatable="false">Sign In</string>
    <string name="title_profile" translatable="false">Profile</string>
    <string name="title_make_new_mess" translatable="false">Make new Mess</string>
    <string name="title_bazar" translatable="false">Bazar</string>
    <string name="title_search">Search Query</string>
    <string name="title_meal" translatable="false">Meal</string>
    <string name="title_payment" translatable="false">Payment</string>
    <string name="title_signup" translatable="false">sign up</string>
    <string name="title_mess" translatable="false">My Mess :  </string>
    <string name="prompt_member_name" translatable="false">Enter Name</string>
    <string name="prompt_member_email">Enter Email </string>
    <string name="prompt_member_phone_no">Enter Mobile Number </string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add">Add</string>
    <string name="member_detail">Member Detail : </string>
    <string name="prompt_member_address">Address : </string>
    <string name="prompt_member_thana">Enter thana name</string>
    <string name="prompt_member_district">Enter district name</string>
    <string name="prompt_member_village_name">Enter village name</string>
    <string name="no_account_prompt">Don\'t Have An Account,Yet?</string>
    <string name="prompt_user_re_password">Retype password</string>
    <string name="prompt_user_password">Enter your password</string>
    <string name="prompt_user_phone_no">Enter your phone number</string>
    <string name="prompt_user_email">Enter your email</string>
    <string name="prompt_user_id">Choise your user name</string>
    <string name="prompt_user_name">Enter your name</string>
    <string name="prompt_max_member">Max member</string>
    <string name="prompt_mess_manager_name">Manager Name</string>
    <string name="prompt_mess_name">Mess name or title</string>
    <string name="prompt_day">Enter day</string>
    <string name="prompt_day_meal">Enter Day Meal Name</string>
    <string name="prompt_morning_meal">Enter Morning Meal Name</string>
    <string name="prompt_night_meal">Enter Night Meal Name</string>
    <string name="prompt_bazar_man_name">Enter Bazar Man Name </string>
    <string name="prompt_item_name">Item name</string>
    <string name="prompt_item_price">Item price</string>
    <string name="prompt_room_cost">Enter room cost</string>
    <string name="prompt_due">Enter Amount</string>

    <string name="prompt_current_password">Enter current password</string>
    <string name="prompt_new_password">Enter new password</string>
    <string name="prompt_re_password">Enter password againa</string>
    <string name="error_current_password">Wrong current password</string>

    <string name="password_mismatched">Passwored Mismatched </string>
    <string name="update_meal">Update Meal</string>
    <string name="update_bazar">Update Bazar</string>
    <string name="greeting">Wellcome TO MMS</string>

    <string name="choose_your_option">Choose your option</string>
    <string name="total_payment">Total payment: </string>
    <string name="total_meal">Total meal: </string>
    <string name="total_meal_cost">Total meal cost: </string>
    <string name="payment_date">Payment Date : </string>
    <string name="login_here"><u>Login</u></string>
    <string name="make_payment">Make payment</string>
    <string name="show_payment">Show payment</string>

    <string name="paid_date">Paid Date: </string>
    <string name="choice_date">Click to Choice Date</string>
    <string name="set_today_bazar">Today\'s Bazar Item: </string>
    <string name="set_today_meal">Today\'s Meal Menu: </string>
    <string name="set_meal_of_the_day">Set meal</string>
    <string name="person_meal_set">Persons Meal</string>
    <string name="monthly_meal_detail">Monthly meal detail</string>
    <string name="set_bazar_of_the_day">Set Bazar</string>
    <string name="bazar_of_the_day">Today\'s Bazar</string>
    <string name="monthly_bazar_detail">Monthly Bazar detail</string>
    <string name="room_payment">Room Payment</string>
    <string name="meal_payment">Meal Payment</string>
    <string name="bazar_payment">Bazar Payment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Log in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up now</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field">Invalid, Please check</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="update_list">
        <item>Change Password</item>
        <item>Change Mobile Number</item>
    </string-array>

    <string-array name="options">
        <item>Members</item>
        <item>Bazar</item>
        <item>Meal</item>
        <item>Payment</item>
    </string-array>
    <string-array name="bazar_option">
        <item>Add bazar list</item>
        <item>Monthly bazar list</item>
    </string-array>
    <string-array name="meal_option">
        <item>Set today\'s meal</item>
        <item>Members meal</item>
        <item>Monthly meal list</item>
    </string-array>
    <string-array name="payment_option">
        <item>Make payment</item>
        <item>Show payment</item>
    </string-array>

    <string-array name="search_query">
        <item>Balance</item>
        <item>Member Due</item>

    </string-array>
</resources>
