<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/members"
        android:title="@string/title_members"
        app:showAsAction="never"/>
    <item
        android:id="@+id/title_bazar"
        android:title="@string/title_bazar"
        app:showAsAction="never">
        <menu>
            <!--<item
                android:id="@+id/set_bazar"
                android:title="@string/set_bazar_of_the_day"
                app:showAsAction="never"/>-->
            <item
                android:id="@+id/bazar_of_the_day"
                android:title="@string/bazar_of_the_day"
                app:showAsAction="never"/>
            <item
                android:id="@+id/monthly_bazar_detail"
                android:title="@string/monthly_bazar_detail"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
        android:id="@+id/title_meal"
        android:title="@string/title_meal"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/set_meal"
                android:title="@string/set_meal_of_the_day"
                app:showAsAction="never"/>
            <item
                android:id="@+id/person_meal_set"
                android:title="@string/person_meal_set"
                app:showAsAction="never"/>
            <item
                android:id="@+id/monthly_meal_detail"
                android:title="@string/monthly_meal_detail"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
        android:id="@+id/title_payment"
        android:title="@string/title_payment"
        app:showAsAction="never">
        <menu>
            <!--<item
                android:id="@+id/room_payment"
                android:title="@string/room_payment"
                app:showAsAction="never"/>
            <item
                android:id="@+id/meal_payment"
                android:title="@string/meal_payment"
                app:showAsAction="never"/>
            <item
                android:id="@+id/bazar_payment"
                android:title="@string/bazar_payment"
                app:showAsAction="never"/>-->
            <item
                android:id="@+id/make_payment"
                android:title="@string/make_payment"
                app:showAsAction="never"/>
            <item
                android:id="@+id/show_payment"
                android:title="@string/show_payment"
                app:showAsAction="never"/>
        </menu>

    </item>
</menu>