<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/bazar_list_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:hint="@string/update_bazar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/item"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="normal"
            android:hint="@string/prompt_item_name"/>
        <TextView
            android:id="@+id/cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_item_price"
            android:textSize="25sp"
            android:textStyle="normal"/>
    </LinearLayout>
    <TextView
        android:id="@+id/dotted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bazar_of_the_day"
        android:textSize="25sp"
        android:textStyle="normal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="Total cost "
            android:hint="@string/prompt_item_name"/>
        <TextView
            android:id="@+id/total_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_item_price"
            android:textSize="25sp"
            android:textStyle="normal"/>
    </LinearLayout>

</LinearLayout>