<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:id="@+id/name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:textSize="30sp"
        android:hint="Name"
        android:layout_margin="10dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paid_date"
            android:textSize="30sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/payment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/payment_date"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/room"
            android:layout_width="250dp"
            android:layout_height="wrap_content" 
            android:textSize="30sp"
            android:layout_margin="4dp"
            android:hint="@string/room_payment"/>
        <TextView

            android:id="@+id/room_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="cost"
            android:layout_margin="4dp"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/meal"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="4dp"
            android:hint="@string/meal_payment"/>
        <TextView

            android:id="@+id/meal_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="cost"
            android:layout_margin="4dp"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="4dp"
            android:hint="@string/total_payment"/>
        <TextView
            android:id="@+id/total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="cost"
            android:layout_margin="4dp"
            android:textSize="30sp"/>
    </LinearLayout>


</LinearLayout>