<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/c_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="20sp"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:hint="@string/prompt_current_password"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <AutoCompleteTextView
            android:id="@+id/n_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="20sp"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:hint="@string/prompt_new_password"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/rn_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:imeOptions="actionUnspecified"
            android:hint="@string/prompt_re_password"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>